--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.quizapp"
+        applicationId "com.example.newsapp"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
@@ -46,15 +46,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     implementation "com.jakewharton.timber:timber:$timberVersion"
 
     kapt "com.android.databinding:compiler:$gradleVersion"
@@ -92,5 +92,10 @@ dependencies {
     //Work
     implementation "android.arch.work:work-runtime-ktx:$workVersion"
 
-}
+    // Picasso
+    implementation "com.squareup.picasso:picasso:$picassoVersion"
 
+    // Material
+    implementation "com.google.android.material:material:$versionMaterial"
+
+}
