--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,6 @@ ext {
     timberVersion = "4.7.1"
     roomVersion = "2.2.5"
     workVersion = "2.3.4"
+    picassoVersion="2.71828"
+    versionMaterial="1.3.0-alpha02"
 }
